# parbrain

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  adjacency.c  brain.c  brain.h  matops.c  nvu.c  nvu.h  simulate.c  submit_job.sh  tags  testbrain.c  thetamap128.csv  thetamap128_cos  thetamap128_random  thetamap128_random2  thetamap32_cos  thetamap32_twosquares  thetamap32_twosquares_3wide  thetamap32_twosquares_5wide  thetamap64.csv  thetamap64_cos  thetamap64_ellipsoids  thetamap64_ellipsoidsthin  thetamap64_random  thetamap64_randomsurface_v5_0003
CMake/: FindCXSparse.cmake
curvature_maps/: thetamap32_circles_4  thetamap32_circles_6  thetamap32_smallercircles_4  thetamap32_smallercircles_6  thetamap32_strip_4  thetamap32_strip_6  thetamap32_tube10_flat  thetamap32_tube10_neg  thetamap32_tube2_neg  thetamap32_tube4_flat  thetamap32_tube4_neg  thetamap32_tube6_flat  thetamap32_tube6_neg  thetamap32_tube8_flat  thetamap32_tube8_neg  thetamap32_twosquares_10wide  thetamap32_twosquares_1wide  thetamap32_twosquares_4wide  thetamap32_verysmalltube  thetamap32_verysmalltube2  thetamap64_randomsurface_L3_K002_n15  thetamap64_randomsurface_L3_K003_n15
documentation/tex_files/: ModelEquations.tex  glossary.tex  library.bib
src/: CMakeLists.txt  adjacency.c  brain.c  brain.h  constants.h  diffusion.c  diffusion.h  matops.c  nvu.c  nvu.h  run_parbrain.c  simulate.c  simulate_main.c  solver.c  solver.h
test/: testbrain.c  testmat2.c  testmatops.c
topology/: Makefile  README  topology_algorithm.c
util/: curvature.m  generate_theta_map.m  plot_csv.py  plot_rad.py  printData.py  simulate.ll.tpl
util/binToVtu/: ConvertBinToVtu  Makefile  RunConvertBinToVtu.bash
util/binToVtu/src/: binToVtu.cxx  bin_to_vtu.cxx
visualisation/: README.md
visualisation/binToVtu/: CMakeLists.txt
visualisation/binToVtu/src/: binToVtu.cxx
